# arbeitsplanungstool

./: .gitignore  README.md  pyproject.toml  requirements.txt
APT_simple/: app.py
APT_simple/core/: cadservice.py
diagrams/: _pycg_files.txt  pycg_callgraph.dot  pycg_callgraph.json
scripts/: make_callgraphs.sh
src/arbeitsplaner/: app.py  requirements-lock.txt
src/arbeitsplaner/core/: cadservice.py  cadservice_UML.txt
src/arbeitsplaner/data/: fräskopf1mm.STL  fräskopf1mm_neu.STL  fräskopf4mm.STL  fräskopf8mm.STL  spannmittel1.STL  twistedbottleeinzeln.STL  werkstück1bearbeitet.STL
src/arbeitsplaner/ui/: main_window.py  voxel_widget.py
src/arbeitsplanungstool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
