[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbeitsplanungstool"
version = "0.1.0"
description = "MTI Arbeitsplanungstool"
authors = [
    { name = "Bryan Witte", email = "b.witte@mti.rwth-aachen.de" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]